tertiary button icon vertical alignment fixed

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -42,21 +42,17 @@
 
     &-tertiary {
         font-size: 1rem;
-        border: math.div(2, 16)*1em solid var(--c-border);
-        padding: 1em;
-        border-radius: 50%;
         width: px-to-rem(56px);
         height: px-to-rem(56px);
+        padding: 1em;
+        border: math.div(2, 16)*1em solid var(--c-border);
+        border-radius: 50%;
         cursor: pointer;
         background-color: transparent;
         transition: border-color ease 200ms;
 
         &--danger:hover {
             border-color: var(--th-c-accent-2);
-        }
-
-        & .icon {
-            vertical-align: middle;
         }
     }
 
